--- a/index.html
+++ b/index.html
@@ -270,6 +270,6 @@
       </div>
     </div>
   </footer>
-  <script src="./dist/main.js"></script>
+  <script src="./dist/main.js" type="module"></script>
 </body>
 </html>
