--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Landing page</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="src/sass/style.css">
+  <link rel="stylesheet" href="./src/sass/style.css">
 </head>
 
 <body>
@@ -270,6 +270,6 @@
       </div>
     </div>
   </footer>
-  <script src="./dist/main.js" type="module"></script>
+  <script src="./dist/script.js"></script>
 </body>
 </html>
