add style for about us

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         your awesome content or completing a conversion action (e.g., signing up for your newsletter, making a
         purchase).</p>
       <div class="layout-3-column employee-container">
-        <div class="employee block-shadowed">
+        <div class="employee block-shadowed employee_selected">
           <div class="employee__content">
             <h5 class="employee__name">Kathy Rosenberg</h5>
             <p class="employee__title">Product Manager</p>
@@ -187,7 +187,7 @@
           </div>
           <img class="employee__photo" src="./src/img/employees/alexandra.png" alt="Alexandra Boyarskaya">
         </div>
-        <div class="employee block-shadowed">
+        <div class="employee block-shadowed employee_selected">
           <div class="employee__content">
             <h5 class="employee__name">Melani Amini</h5>
             <p class="employee__title">Photographer</p>
