add hamburger menu

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           </object>
         </a>
       </div>
-      <nav class="header__navigation">
+      <nav class="header__navigation header__navigation_closed">
         <ul class="navigation">
           <li class="navigation__link">Home</li>
           <li class="navigation__link">Services</li>
